--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openhab</groupId>
 		<artifactId>pom-tycho</artifactId>
-		<version>2.2.1-SNAPSHOT</version>
+		<version>2.2.1</version>
 		<relativePath/>
 	</parent>
 
@@ -14,7 +14,7 @@
 
 	<name>ZigBee Binding</name>
 	<packaging>eclipse-plugin</packaging>
-	<version>2.2.1-SNAPSHOT</version>
+	<version>2.2.1</version>
 
 	<properties>
 		<report.fail.on.error>false</report.fail.on.error>
@@ -24,7 +24,7 @@
 		<connection>scm:git:${scm.gitBaseUrl}/org.openhab.binding.zigbee.git</connection>
 		<developerConnection>scm:git:${scm.gitBaseUrl}/org.openhab.binding.zigbee.git</developerConnection>
 		<url>https://github.com/openhab/org.openhab.binding.zigbee</url>
-		<tag>HEAD</tag>
+		<tag>2.2.1</tag>
 	</scm>
 
 	<distributionManagement>
